[package]
name = "http-proxy"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/williamlsh/http-proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
bytes = "1.8"
dotenvy = "0.15"
http = "1.1"
http-body = { version = "1.0" }
http-body-util = "0.1"
hyper = { version = "1.5", features = ["full"] }
pin-project-lite = "0.2"
tokio = { version = "1.41", features = ["full"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.6"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.71.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
]
