[package]
name = "http-proxy"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/williamlsh/http-proxy"

[dependencies]
bytes = "1.10"
dotenvy = "0.15"
http = "1.3"
http-body = { version = "1.0" }
http-body-util = "0.1"
hyper = { version = "1.6", features = ["full"] }
pin-project-lite = "0.2"
tokio = { version = "1.44", features = ["full"] }
